--- a/projects.css
+++ b/projects.css
@@ -1,9 +1,3 @@
-
-/* 
-.lightning {
-  animation: lightning 1s linear 0.5s;
-} */
-
 .project-sum-box {
   position: relative;
   text-align: center;
@@ -15,12 +9,12 @@
   height: 320px;
 }
 
-
 .project-sum-box h1 {
   margin-top: 16px;
   margin-bottom: 16px;
   font-size: 5em;
-  color: #FFFFFF;
+  color: #ffffff;
+  letter-spacing: 8px;
   text-shadow: 3px 5px 2px #474747;
 }
 
@@ -41,7 +35,6 @@
   opacity: 0.5;
 }
 
-
 .project-card-container {
   display: flex;
   flex-wrap: wrap;
@@ -49,64 +42,88 @@
   padding: 16px;
 }
 
-
 .project-card {
   width: 320px;
   height: 274px;
-  padding: 16px 0;
-  /* border: 1px solid black; */
   margin: 16px 16px;
 }
 
-
-.project-card h1, h3 {
+.project-card-inner {
   position: relative;
-  top: 0;
-  font-size: 2em;
+  transition: transform 1s;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+}
+
+.project-card-front {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+
+}
+
+.project-card-back,
+.project-card-front {
+
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  backface-visibility: hidden;
+}
+
+.project-card:hover .project-card-inner {
+  transform: rotateY(180deg);
+}
+
+.project-card-back {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  transform: rotateY(180deg);
+}
+
+.project-card-front h1 {
+  letter-spacing: 6px;
+  font-size: 3em;
   text-align: center;
 }
 
-.project-card h3 {
-  top: 80px;
-}
-
-.project-card h2 {
-  position: relative;
-  top: 70px;
+.project-card-back h2 {
+  margin: 42px;
+  font-weight: 500;
   font-size: 3em;
   text-align: center;
 }
 
 .project-tools {
-  position: relative;
-  left: 120px;
-  top: 90px;
-  margin: 8px;
-  font-size: 2em;
+  margin-top: 24px;
+  display: flex;
 }
 
+.project-tools div {
+  padding: 8px;
+}
 
-.project-card-container .project-card:nth-child(1) {
+#project-a div:nth-child(-n + 2) {
   background-color: teal;
-
 }
 
-.project-card-container .project-card:nth-child(2) {
+#project-b div:nth-child(-n + 2) {
   background-color: cornflowerblue;
-
 }
 
-.project-card-container .project-card:nth-child(3) {
+#project-c div:nth-child(-n + 2) {
   background-color: crimson;
-
 }
 
-.project-card-container .project-card:nth-child(4) {
+#project-d div:nth-child(-n + 2) {
   background-color: slateblue;
-
 }
 
-.project-card-container .project-card:nth-child(5) {
+#project-e div:nth-child(-n + 2) {
   background-color: plum;
-
 }
